# aiosmtpd

./: .appveyor.yml  .coverage.MBP-Yuri.local.29469.853742  .coverage.ini  .coveragerc  .gitignore  .gitlab-ci.yml  .mypy.ini  .readthedocs.yml  .travis-ci.yml  .travis.yml  CHANGES.rst  DESCRIPTION.rst  LICENSE  MANIFEST.in  Makefile  NOTES.rst  NOTICE  README.rst  appveyor.yml  bandit.yml  client.py  conf.py  coverage.cfg  coverage.ini  housekeep.py  lgtm.yml  py34-coverage.ini  py34mswin-coverage.ini  py35-coverage.ini  py36-coverage.ini  pyproject.toml  pytest.ini  readthedocs.yml  release.py  requirements-dev.txt  requirements.txt  server.py  setup.cfg  setup.py  setup_helpers.py  (+3 more)
.coverage-ini/: py34mswin.ini  py36mswin.ini
.github/: SECURITY.rst
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-cd.yml  codeql.yml  test.yml  unit-testing-and-coverage.yml
_static/: aiosmtpd.css
_static/css/: aiosmtpd.css
aiosmtp/: __init__.py  const.py  protocol.py  streams.py
aiosmtpd/: __init__.py  __main__.py  base_handler.py  context.py  controller.py  errors.py  events.py  handlers.py  lmtp.py  main.py  protocol.py  proxy_protocol.py  smtp.py  smtpd.py  streams.py
aiosmtpd/docs/: NEWS.rst  RTD-requirements.txt  auth.rst  cli.rst  concepts.rst  conf.py  controller.rst  handlers.rst  index.rst  intro.rst  lmtp.rst  mailbox.rst  manpage.rst  migrating.rst  proxyprotocol.rst  ref-controller.rst  ref-smtp.rst  requirements.txt  smtp.rst  smtpd.rst  testing.rst
aiosmtpd/docs/_exts/: autoprogramm.py
aiosmtpd/qa/: test_0packaging.py  test_1testsuite.py
aiosmtpd/testing/: flake8.py  helpers.py  nose.py  statuscodes.py
aiosmtpd/tests/: .test_smtp.py.swp  conftest.py  test_0test.py  test_1packaging.py  test_commands.py  test_events.py  test_handlers.py  test_lmtp.py  test_main.py  test_misc.py  test_proxyprotocol.py  test_server.py  test_smtp.py  test_smtps.py  test_smtpsmuggling.py  test_starttls.py
aiosmtpd/tests/certs/: server.crt  server.key
examples/: server.py
examples/authenticated_relayer/: .gitignore  make_user_db.py  requirements.txt  server.py
examples/basic/: client.py  server.py
