[metadata]
name = aiosmtpd
version = attr: aiosmtpd.smtp.__version__
description = aiosmtpd - asyncio based SMTP server
long_description =
    This is a server for SMTP and related protocols, similar in utility to the
    standard library's smtpd.py module, but rewritten to be based on asyncio for
    Python 3.

    Please visit the Project Homepage for more information.
long_description_content_type = text/x-rst
url = https://aiosmtpd.readthedocs.io/
project_urls =
    Bug Tracker = https://github.com/aio-libs/aiosmtpd/issues
    Documentation = https://aiosmtpd.readthedocs.io/
    Source Code = https://github.com/aio-libs/aiosmtpd
keywords = email, smtpd, smtp
license = Apache-2.0
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications :: Email :: Mail Transport Agents
    Framework :: AsyncIO

[options]
zip_safe = false
python_requires = ~=3.6
packages = find:
include_package_data = true
setup_requires =
    atpublic
    attrs
install_requires =
    atpublic
    attrs
tests_require =
    tox

[options.packages.find]
exclude =
    examples

[options.entry_points]
console_scripts =
    aiosmtpd = aiosmtpd.main:main

[easy_install]
zip_ok = false

[build_sphinx]
source-dir = aiosmtpd/docs
